Add our products and service section

--- a/home.html
+++ b/home.html
@@ -38,136 +38,92 @@
       </div>
     </header>
 
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
+    <!-- Hero slider -->
+    <div class="carousel-container">
+      <div class="carousel">
+        <div class="item main">
+          <img src="images/regal-empire-hero.jpg" alt="mountain" />
+        </div>
+        <div class="item">
+          <img src="images/eighteeen-hero.jpeg" alt="beach" />
+        </div>
+        <div class="item">
+          <img src="images/new-metro-city-hero.jpg" alt="cityscape" />
+        </div>
+      </div>
+      <div class="navigation">
+        <div class="prev nav-btn"><</div>
+        <div class="next nav-btn">></div>
+      </div>
     </div>
 
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
+    <!--Our Work Section-->
+    <section class="work">
+      <div class="container">
+        <h1 class="section-heading"><span>Our</span> Products</h1>
+        <p>
+          We provide high standard clean website for your business solutions
+        </p>
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="overlay">
+              <span>Discovery Garden</span>
+              <a href="#">Islamabad</a>
+            </div>
+            <img src="images/featured-products-1.jpg" alt="" />
+          </div>
+          <div class="card">
+            <div class="overlay">
+              <span>Kingdom Valley</span>
+              <a href="#">Islamabad</a>
+            </div>
+            <img src="images/featured-products-2.jpg" alt="" />
+          </div>
+          <div class="card">
+            <div class="overlay">
+              <span>Park View City</span>
+              <a href="#">Islamabad</a>
+            </div>
+            <img src="images/featured-products-3.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
-
-    <div class="section">
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book. It has survived not only five centuries, but
-      also the leap into electronic typesetting, remaining essentially
-      unchanged. It was popularised in the 1960s with the release of Letraset
-      sheets containing Lorem Ipsum passages, and more recently with desktop
-      publishing software like Aldus PageMaker including versions of Lorem
-      Ipsum.
-    </div>
+    <section class="services">
+      <div class="container">
+        <h1 class="section-heading"><span>Our </span>Services</h1>
+        <p>
+          We provide high standard clean website for your business solutions
+        </p>
+        <div class="card-wrapper">
+          <div class="card">
+            <img src="images/asset-management.png" alt="" />
+            <h2>Asset Management</h2>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/merge-your-property.png" alt="" />
+            <h2>Merge Your Property</h2>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/expert-opinions.png" alt="" />
+            <h2>Expert Opinions</h2>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="js/slider.js"></script>
   </body>
 </html>
