--- a/home.html
+++ b/home.html
@@ -9,6 +9,11 @@
     <title>Regal Marketing | Home</title>
 
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,600&display=swap"
       rel="stylesheet"
     />
@@ -124,6 +129,196 @@
         </div>
       </div>
     </section>
+
+    <!-- News Section -->
+    <!--About Section-->
+    <section class="about">
+      <div class="container">
+        <h1 class="section-heading"><span>Our </span>News</h1>
+        <p>
+          We provide high standard clean website for your business solutions
+        </p>
+        <div class="container flex items-center">
+          <div class="flex-1">
+            <img class="about-me-img" src="images/updated-news.jpg" alt="" />
+          </div>
+          <div class="flex-1">
+            <h3>Offices | 02 August 2022</h3>
+            <h1>Business <span>Insights</span></h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+              amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat
+            </p>
+            <button class="btn btn-secondary">EXPLORE ALL NEWS</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Our Blog Section-->
+    <section class="blog">
+      <div class="container">
+        <h1 class="section-heading"><span>Our</span> Blog</h1>
+        <p>
+          We provide high standard clean website for your business solutions
+        </p>
+        <div class="card-wrapper">
+          <div class="card">
+            <div class="img-wrapper">
+              <img src="images/advantages-of-investment.jpeg" />
+            </div>
+            <div class="card-content">
+              <a href="#">
+                <h1>Advantages of Investment in Real Estate</h1>
+              </a>
+              <span>August 29, 2022</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-wrapper">
+              <img src="images/early-bird.png" />
+            </div>
+            <div class="card-content">
+              <a href="#">
+                <h1>Early Bird Balloting</h1>
+              </a>
+              <span>August 29, 2022</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="img-wrapper">
+              <img src="images/golden-investment.jpeg" />
+            </div>
+            <div class="card-content">
+              <a href="#">
+                <h1>A Golden Investment Opportunity</h1>
+              </a>
+              <span>August 29, 2022</span>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Reviews Section-->
+    <section class="reviews">
+      <div class="container">
+        <h1 class="section-heading"><span>Our</span> Client</h1>
+        <p>
+          We provide high standard clean website for your business solutions
+        </p>
+        <div class="testimonial">
+          <div class="testimonial-text">
+            <div class="user-text">
+              <i class="fa fa-quote-left"></i>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam
+              </p>
+              <span>Momina Abid, Writer</span>
+            </div>
+            <div class="user-text">
+              <i class="fa fa-quote-left"></i>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam
+              </p>
+              <span>Ibrar ul Haq, Artist</span>
+            </div>
+            <div class="user-text active-text">
+              <i class="fa fa-quote-left"></i>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam
+              </p>
+              <span>Abida Perveen, Singer</span>
+            </div>
+            <div class="user-text">
+              <i class="fa fa-quote-left"></i>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam
+              </p>
+              <span>Asim Azhar, Singer</span>
+            </div>
+            <div class="user-text">
+              <i class="fa fa-quote-left"></i>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam
+              </p>
+              <span>Atif Aslam, Singer</span>
+            </div>
+          </div>
+          <div class="testimonial-pic">
+            <img
+              src="images/lady.png"
+              class="user-pic"
+              onclick="showReview()"
+            />
+            <img
+              src="images/lady.png"
+              class="user-pic"
+              onclick="showReview()"
+            />
+            <img
+              src="images/lady.png"
+              class="user-pic active-pic"
+              onclick="showReview()"
+            />
+            <img
+              src="images/lady.png"
+              class="user-pic"
+              onclick="showReview()"
+            />
+            <img
+              src="images/lady.png"
+              class="user-pic"
+              onclick="showReview()"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      type="text/javascript"
+    ></script>
+
     <script src="js/slider.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
