--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
           <img src="images/regal-empire-hero.jpg" alt="mountain" />
         </div>
         <div class="item">
-          <img src="images/eighteeen-hero.jpeg" alt="beach" />
+          <img src="images/eighteen-hero.jpg" alt="beach" />
         </div>
         <div class="item">
           <img src="images/new-metro-city-hero.jpg" alt="cityscape" />
