Complete footer design

--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
     <header>
@@ -65,10 +66,8 @@
     <!--Our Work Section-->
     <section class="work">
       <div class="container">
-        <h1 class="section-heading"><span>Our</span> Products</h1>
-        <p>
-          We provide high standard clean website for your business solutions
-        </p>
+        <h1 class="section-heading">Entice with Benefits</h1>
+        <p>Ultra modern and cost effective projects</p>
         <div class="card-wrapper">
           <div class="card">
             <div class="overlay">
@@ -97,25 +96,28 @@
 
     <section class="services">
       <div class="container">
-        <h1 class="section-heading"><span>Our </span>Services</h1>
+        <h1 class="section-heading">Providing Solutions</h1>
         <p>
-          We provide high standard clean website for your business solutions
+          Standing close to our Customers, as we are ready to serve you with
+          improved Solutions
         </p>
         <div class="card-wrapper">
           <div class="card">
             <img src="images/asset-management.png" alt="" />
             <h2>Asset Management</h2>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              Managing workspaces, retail, residential or industrial property,
+              efficiently and cost-effectively, handling the loops and enhancing
+              the worth.
             </p>
           </div>
           <div class="card">
             <img src="images/merge-your-property.png" alt="" />
             <h2>Merge Your Property</h2>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              Trade your assets with us. You might be able to build a larger and
+              more valuable property than you could have on each parcel
+              separately.
             </p>
           </div>
           <div class="card">
@@ -312,6 +314,67 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="row">
+        <div class="col">
+          <img src="images/footer-logo.png" class="footer-logo" />
+          <p>
+            Subscribe Easy Tutorials Youtube Channel to watch more videos on
+            website development and press the Bell icon to get immediate
+            notification of latest videos.
+          </p>
+        </div>
+        <div class="col">
+          <h3>
+            Office
+            <div class="underline"><span></span></div>
+          </h3>
+          <p>1st Floor, Zamzam Arcade, Plaza 1-A</p>
+          <p>Street # 39, Alia Market, G-13/2, Islamabad</p>
+          <p class="email-id">info@regalmarketing.com.pk</p>
+          <h4>+92 - 3349000007</h4>
+        </div>
+        <div class="col">
+          <h3>
+            Links
+            <div class="underline"><span></span></div>
+          </h3>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Products & Services</a></li>
+            <li><a href="">Business Insights</a></li>
+            <li><a href="">Videos</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <h3>
+            Newsletter
+            <div class="underline"><span></span></div>
+          </h3>
+          <form>
+            <i class="far fa-envelope"></i>
+            <input type="email" placeholder="Enter you email id" />
+            <button type="submit">
+              <i class="fas fa-arrow-right"></i>
+            </button>
+          </form>
+          <div class="social-icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-whatsapp"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <p class="copyright">
+        Merge your property with Regal Marketing - All Rights Reserved
+      </p>
+    </footer>
 
     <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
