Updates in Home Page

--- a/home.html
+++ b/home.html
@@ -136,18 +136,16 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading"><span>Our </span>News</h1>
-        <p>
-          We provide high standard clean website for your business solutions
-        </p>
+        <h1 class="section-heading">Insights</h1>
+        <p>Are you informed? More news more often move closer to the world</p>
         <div class="container flex items-center">
           <div class="flex-1">
             <img class="about-me-img" src="images/updated-news.jpg" alt="" />
           </div>
           <div class="flex-1">
             <h3>Offices | 02 August 2022</h3>
-            <h1>Business <span>Insights</span></h1>
-            <p>
+            <h1 class="news-title">Business <span>Insights</span></h1>
+            <p class="news-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -166,9 +164,10 @@
     <!--Our Blog Section-->
     <section class="blog">
       <div class="container">
-        <h1 class="section-heading"><span>Our</span> Blog</h1>
+        <h1 class="section-heading">WeBlog</h1>
         <p>
-          We provide high standard clean website for your business solutions
+          We smash you with the information that will make your investment
+          easier
         </p>
         <div class="card-wrapper">
           <div class="card">
@@ -232,10 +231,8 @@
     <!--Reviews Section-->
     <section class="reviews">
       <div class="container">
-        <h1 class="section-heading"><span>Our</span> Client</h1>
-        <p>
-          We provide high standard clean website for your business solutions
-        </p>
+        <h1 class="section-heading">Worthy Clients</h1>
+        <p>The Customer is always Right</p>
         <div class="testimonial">
           <div class="testimonial-text">
             <div class="user-text">
@@ -333,7 +330,7 @@
           <p>1st Floor, Zamzam Arcade, Plaza 1-A</p>
           <p>Street # 39, Alia Market, G-13/2, Islamabad</p>
           <p class="email-id">info@regalmarketing.com.pk</p>
-          <h4>+92 - 3349000007</h4>
+          <h4>+92 - 334 9000007</h4>
         </div>
         <div class="col">
           <h3>
