Update email field

--- a/home.html
+++ b/home.html
@@ -354,7 +354,7 @@
           </h3>
           <form>
             <i class="far fa-envelope"></i>
-            <input type="email" placeholder="Enter you email id" />
+            <input type="email" placeholder="Enter you email" />
             <button type="submit">
               <i class="fas fa-arrow-right"></i>
             </button>
