--- a/home.html
+++ b/home.html
@@ -329,9 +329,9 @@
             data-aos="fade-up"
           />
           <p data-aos="fade-up">
-            Subscribe Easy Tutorials Youtube Channel to watch more videos on
-            website development and press the Bell icon to get immediate
-            notification of latest videos.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam
           </p>
         </div>
         <div class="col">
@@ -364,7 +364,7 @@
             Newsletter
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
-          <form>
+          <form data-aos="zoom-in">
             <i class="far fa-envelope" data-aos="fade-right"></i>
             <input
               type="email"
