New Content Added

--- a/home.html
+++ b/home.html
@@ -240,15 +240,15 @@
           <div class="testimonial-text">
             <div class="user-text">
               <i class="fa fa-quote-left"></i>
-              <p data-aos="fade-up">
+              <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam
               </p>
-              <span data-aos="fade-up">Momina Abid, Writer</span>
+              <span>Momina Abid, Writer</span>
             </div>
-            <div class="user-text" data-aos="fade-up">
-              <i class="fa fa-quote-left" data-aos="fade-up"></i>
+            <div class="user-text">
+              <i class="fa fa-quote-left"></i>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
