About page setup

--- a/home.html
+++ b/home.html
@@ -27,14 +27,16 @@
   <body>
     <header style="background-image: url('images/new-header.png')">
       <nav id="navbar">
-        <img
-          src="images/logo-secondary.png"
-          id="logo"
-          class="logo"
-          data-aos="zoom-out"
-        />
+        <a href="home.html">
+          <img
+            src="images/logo-secondary.png"
+            id="logo"
+            class="logo"
+            data-aos="zoom-out"
+          />
+        </a>
         <ul id="menu">
-          <li data-aos="zoom-out"><a href="">About</a></li>
+          <li data-aos="zoom-out"><a href="about.html">About</a></li>
           <li data-aos="zoom-out"><a href="">Products & Services</a></li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
           <li data-aos="zoom-out"><a href="">Videos</a></li>
